🐛 Fix: Ajuste no estilo do collapse

--- a/api/src/styles/dashboard.css
+++ b/api/src/styles/dashboard.css
@@ -45,6 +45,7 @@
     height: fit-content;
     padding: 15px 10px 10px 10px;
     margin-bottom: 50px;
+    width: 82%
 }
 
 .box-dash{
